show responses info